Test that segfault is avoided when a fetch from follower lease expires and the partition is waiting for a list offsets result

--- a/win32/tests/tests.vcxproj
+++ b/win32/tests/tests.vcxproj
@@ -220,6 +220,7 @@
     <ClCompile Include="..\..\tests\0137-barrier_batch_consume.c" />
     <ClCompile Include="..\..\tests\0138-admin_mock.c" />
     <ClCompile Include="..\..\tests\8000-idle.cpp" />
+    <ClCompile Include="..\..\tests\8001-fetch_from_follower_mock_manual.c" />
     <ClCompile Include="..\..\tests\test.c" />
     <ClCompile Include="..\..\tests\testcpp.cpp" />
     <ClCompile Include="..\..\tests\rusage.c" />
