--- a/win32/tests/tests.vcxproj
+++ b/win32/tests/tests.vcxproj
@@ -208,6 +208,7 @@
     <ClCompile Include="..\..\tests\0124-openssl_invalid_engine.c" />
     <ClCompile Include="..\..\tests\0125-immediate_flush.c" />
     <ClCompile Include="..\..\tests\0126-oauthbearer_oidc.c" />
+    <ClCompile Include="..\..\tests\0127-fetch_queue_backoff.cpp" />
     <ClCompile Include="..\..\tests\0128-sasl_callback_queue.cpp" />
     <ClCompile Include="..\..\tests\0129-fetch_aborted_msgs.c" />
     <ClCompile Include="..\..\tests\0130-store_offsets.c" />
