Add rack-awareness (KIP-881) to sticky-assignor (#4274)
* [cooperative][manual commit] Prevent offsets from being committed when a rebalance is in progress and partitions are owned by consumer

* Add test

* Format

* Ensure the operation is thread safe

* Add missing test config

* Don't propagate results if we decide to skip committing

* fixing broken test

* fixing typo

* Add rack-awareness (KIP-881) to sticky-assignor

* Fix minor issues with commiting only when not rebalancing

* memory leak in test
* test naming
* test copyright

* Fix style and remove rd_list_add_const

---------

Co-authored-by: Roxane Fruytier <roxane.fruytier@datadoghq.com>
Co-authored-by: William Morgan <william.morgan@crowdstrike.com>
Co-authored-by: William Morgan <wmorgan6796@gmail.com>

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -130,6 +130,7 @@ set(
     0137-barrier_batch_consume.c
     0138-admin_mock.c
     0139-offset_validation_mock.c
+    0140_cooperative_commit_rebalance.c
     8000-idle.cpp
     8001-fetch_from_follower_mock_manual.c
     test.c
