--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -75,7 +75,7 @@ blocks:
       jobs:
         - name: 'Style check'
           commands:
-            - sudo apt install -y clang-format-10 python3 python3-pip python3-setuptools
+            - sudo apt install -y clang-format python3 python3-pip python3-setuptools
             - python3 -m pip install -r packaging/tools/requirements.txt
             - CLANG_FORMAT=clang-format-10 make style-check
 
@@ -104,7 +104,7 @@ blocks:
     task:
       agent:
         machine:
-          type: s1-nonprod-ubuntu22-04-amd64-1
+          type: s1-prod-ubuntu20-04-amd64-2
       env_vars:
         - name: CFLAGS
           value: -std=gnu90 # Test minimum C standard, default in CentOS 7
