Scram Config API in Admin Client [KIP-554] <- various changes (#4306)
* Remove editor configuration file

* Remove example binary and add it to
other places where it's listed

* Change copyright for new files

* Remove new error code

* Doxygen documentation,
remove return values from admin
functions

* Make alteration type an
internal enum

* Make returned types constant,
always return from async functions through
the queue

* Use event functions for top level error

* Return arrays when the array
contains pointers.
Renamed rd_kafka_UserScramCredentialAlterationResultElement
to rd_kafka_AlterUserScramCredentials_result_response
following admin api conventions

* Test improvements and fix for memory leak

* Use byte array for salt and password,
create random salt if not provided,
move hmac so sasl isn't required,
allow multiple alterations for the same
user as in Java,
example taking parameters from command
line

* Remove fprintf from tests

* Correct asserts when configured without SSL

* Compact bytes implementation,
use compact bytes for serialization

* Style fix

* Fix CMake

* Value 0x20000 is used by IncrementalAlterConfigs

* Documentation order

* Documentation improvements

* Read compact bytes implementation

* Improve security, refactor validation

* Changelog and support table

* Api versions update

* Address some comments

* Fix when disabling ssl

* Style fix and
use rd_strcmp2
LICENCE auto fix

* Address comments

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -26,6 +26,9 @@ target_link_libraries(openssl_engine_example_cpp PUBLIC rdkafka++)
 add_executable(misc misc.c ${win32_sources})
 target_link_libraries(misc PUBLIC rdkafka)
 
+add_executable(user_scram user_scram.c ${win32_sources})
+target_link_libraries(user_scram PUBLIC rdkafka)
+
 
 # The targets below has Unix include dirs and do not compile on Windows.
 if(NOT WIN32)
