Bug reproduce: add an unit test case for rd_kafka_flush. Fix 1

--- a/tests/test.conf
+++ b/tests/test.conf
@@ -22,6 +22,6 @@ test.timeout.multiplier=100
 metadata.broker.list=localhost:9092
 
 # Debugging
-#debug=metadata,topic,msg,broker
+debug=metadata,topic,msg,broker
 
 # Any other librdkafka configuration property.
