--- a/src/Makefile
+++ b/src/Makefile
@@ -9,6 +9,9 @@ ifneq ($(wildcard ../.git),)
 CPPFLAGS += -DLIBRDKAFKA_GIT_VERSION="\"$(shell git describe --abbrev=6 --dirty --tags 2>/dev/null)\""
 endif
 
+CPPFLAGS += -I../nanopb -I../opentelemetry -DPB_FIELD_32BIT
+
+
 SRCS_$(WITH_SASL_CYRUS) += rdkafka_sasl_cyrus.c
 SRCS_$(WITH_SASL_SCRAM) += rdkafka_sasl_scram.c
 SRCS_$(WITH_SASL_OAUTHBEARER) += rdkafka_sasl_oauthbearer.c
@@ -56,7 +59,13 @@ SRCS=		rdkafka.c rdkafka_broker.c rdkafka_msg.c rdkafka_topic.c \
 		rdvarint.c rdbuf.c rdmap.c rdunittest.c \
 		rdkafka_mock.c rdkafka_mock_handlers.c rdkafka_mock_cgrp.c \
 		rdkafka_error.c rdkafka_fetcher.c rdkafka_telemetry.c \
+		rdkafka_telemetry_encode.c rdkafka_telemetry_decode.c \
+		../nanopb/pb_encode.c ../nanopb/pb_decode.c ../nanopb/pb_common.c \
 		$(SRCS_y)
+
+SRCS += ../opentelemetry/metrics.pb.c
+SRCS += ../opentelemetry/common.pb.c
+SRCS += ../opentelemetry/resource.pb.c
 
 HDRS=		rdkafka.h rdkafka_mock.h
 
