--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -54,6 +54,14 @@ set(
     rdkafka_error.c
     rdkafka_fetcher.c
     rdkafka_telemetry.c
+    rdkafka_telemetry_decode.c
+    rdkafka_telemetry_encode.c
+    nanopb/pb_encode.c
+    nanopb/pb_decode.c
+    nanopb/pb_common.c
+    opentelemetry/metrics.pb.c
+    opentelemetry/common.pb.c
+    opentelemetry/resource.pb.c
     rdlist.c
     rdlog.c
     rdmurmur2.c
