--- a/win32/tests/tests.vcxproj
+++ b/win32/tests/tests.vcxproj
@@ -230,6 +230,7 @@
     <ClCompile Include="..\..\tests\rusage.c" />
     <ClCompile Include="..\..\src\tinycthread.c" />
     <ClCompile Include="..\..\src\tinycthread_extra.c" />
+    <ClCompile Include="..\..\src\rdallocator.c" />
     <ClCompile Include="..\..\src\rdlist.c" />
   </ItemGroup>
   <ItemGroup>
