[admin] KIP-430: Add authorized operations to describe API
commit bee8d6a80b81a8f31c823750e3e504537cd954ac
Author: Milind L <miluthra@confluent.io>
Date:   Wed Sep 27 11:40:35 2023 +0530

    Squashed commit of the following:

    commit 73cf87c20f76a95d598547a70699d16bd8a07089
    Author: Emanuele Sabellico <esabellico@confluent.io>
    Date:   Tue Sep 26 14:48:57 2023 +0200

        Fix segfault if assignor state is NULL, (#4381)

        e.g. a destroy happens before the first assignment.
        Only affects the cooperative-sticky assignor

    commit 1cb80090dfc75f5a36eae3f4f8844b14885c045e
    Author: Emanuele Sabellico <esabellico@confluent.io>
    Date:   Thu Sep 21 10:04:07 2023 +0200

        Add destroy call when leader epoch is stale (#4429)

        and partition is in state active

    commit 49f180a36c247100dc246379ace84833b91f4038
    Author: Pranav Rathi <4427674+pranavrth@users.noreply.github.com>
    Date:   Tue Aug 15 23:47:28 2023 +0530

        Added new environment variable to tests - TESTS_SKIP_BEFORE (#4317)

    commit ff1aaf579512e79129b869c266b6add0a3d3a613
    Author: Pranav Rathi <4427674+pranavrth@users.noreply.github.com>
    Date:   Mon Aug 14 18:31:48 2023 +0530

        Fix ListConsumerGroupOffsets not fetching offsets for all the topics in a group with Apache Kafka version below 2.4.0. (#4346)

commit f6f0a62aa270661143cf31284f4adab62ef76257
Author: Milind L <miluthra@confluent.io>
Date:   Mon Sep 25 17:00:05 2023 +0530

    Fix case where broker RPC might not contain authorized operations

commit 63e0748f81bccd001df5d757872514cf16641649
Author: Milind L <miluthra@confluent.io>
Date:   Mon Sep 25 16:14:47 2023 +0530

    Fix possible initialization issue

commit 7205354438883dd3bebd644adc97c34e684cb8f4
Author: Milind L <miluthra@confluent.io>
Date:   Mon Sep 25 16:02:37 2023 +0530

    Differentiate between 0 and unrequested authorized ops

commit adc0c4f93f5d3d25dacde195fc31322066811137
Author: Milind L <miluthra@confluent.io>
Da

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -53,6 +53,12 @@ target_link_libraries(incremental_alter_configs PUBLIC rdkafka)
 add_executable(user_scram user_scram.c ${win32_sources})
 target_link_libraries(user_scram PUBLIC rdkafka)
 
+add_executable(describe_topics describe_topics.c ${win32_sources})
+target_link_libraries(describe_topics PUBLIC rdkafka)
+
+add_executable(describe_cluster describe_cluster.c ${win32_sources})
+target_link_libraries(describe_cluster PUBLIC rdkafka)
+
 # The targets below has Unix include dirs and do not compile on Windows.
 if(NOT WIN32)
     add_executable(rdkafka_example rdkafka_example.c)
