--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -134,6 +134,7 @@ set(
     0140-commit_metadata.cpp
     0142-reauthentication.c
     0143-exponential_backoff_mock.c
+    0144-idempotence_mock.c
     8000-idle.cpp
     8001-fetch_from_follower_mock_manual.c
     test.c
