--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -110,6 +110,10 @@ blocks:
       env_vars:
         - name: CFLAGS
           value: -std=gnu90 # Test minimum C standard, default in CentOS 7
+      prologue:
+        commands:
+          - . vault-sem-get-secret dockerhub-semaphore-cred
+          - docker login --username $DOCKERHUB_USER --password $DOCKERHUB_APIKEY
       jobs:
         - name: 'Build and integration tests'
           commands:
@@ -142,6 +146,10 @@ blocks:
       agent:
         machine:
           type: s1-prod-ubuntu20-04-amd64-2
+      prologue:
+        commands:
+          - . vault-sem-get-secret dockerhub-semaphore-cred
+          - docker login --username $DOCKERHUB_USER --password $DOCKERHUB_APIKEY
       epilogue:
         commands:
           - '[[ -z $SEMAPHORE_GIT_TAG_NAME ]] || artifact push workflow artifacts/ --destination artifacts/${ARTIFACT_KEY}/'
@@ -195,6 +203,10 @@ blocks:
       agent:
         machine:
           type: s1-prod-ubuntu20-04-arm64-1
+      prologue:
+        commands:
+          - . vault-sem-get-secret dockerhub-semaphore-cred
+          - docker login --username $DOCKERHUB_USER --password $DOCKERHUB_APIKEY
       epilogue:
         commands:
           - '[[ -z $SEMAPHORE_GIT_TAG_NAME ]] || artifact push workflow artifacts/ --destination artifacts/${ARTIFACT_KEY}/'
