add clamav to other build systems

--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -21,8 +21,15 @@ blocks:
       env_vars:
         - name: ARTIFACT_KEY
           value: p-librdkafka__plat-osx__arch-arm64__lnk-all
+      prologue:
+        commands:
+          - docker login --username $DOCKERHUB_USER --password $DOCKERHUB_APIKEY
+          -	mkdir -p /tmp/clamav-db
+	        - curl https://cfltavupdates.s3.us-west-2.amazonaws.com/downloads/signatures.tgz -o /tmp/clamav-db/signatures.tgz
+	        - tar -xzf /tmp/clamav-db/signatures.tgz -C /tmp/clamav-db
       epilogue:
         commands:
+          - clamscan -d /tmp/clamav-db --max-scansize=1024M --max-filesize=1024M -ir artifacts
           - '[[ -z $SEMAPHORE_GIT_TAG_NAME ]] || artifact push workflow artifacts/ --destination artifacts/${ARTIFACT_KEY}/'
       jobs:
         - name: 'Build'
@@ -47,8 +54,14 @@ blocks:
       env_vars:
         - name: ARTIFACT_KEY
           value: p-librdkafka__plat-osx__arch-x64__lnk-all
+      prologue:
+        commands:
+          -	mkdir -p /tmp/clamav-db
+	        - curl https://cfltavupdates.s3.us-west-2.amazonaws.com/downloads/signatures.tgz -o /tmp/clamav-db/signatures.tgz
+	        - tar -xzf /tmp/clamav-db/signatures.tgz -C /tmp/clamav-db
       epilogue:
         commands:
+          - clamscan -d /tmp/clamav-db --max-scansize=1024M --max-filesize=1024M -ir artifacts
           - '[[ -z $SEMAPHORE_GIT_TAG_NAME ]] || artifact push workflow artifacts/ --destination artifacts/${ARTIFACT_KEY}/'
       jobs:
         - name: 'Build'
@@ -148,8 +161,12 @@ blocks:
       prologue:
         commands:
           - docker login --username $DOCKERHUB_USER --password $DOCKERHUB_APIKEY
+          -	mkdir -p /tmp/clamav-db
+	        - curl https://cfltavupdates.s3.us-west-2.amazonaws.com/downloads/signatures.tgz -o /tmp/clamav-db/signatures.tgz
+	        - tar -xzf /tmp/clamav-db/signatures.tgz -C /tmp/clamav-db
       epilogue:
         commands:
+          -  clamscan -d /tmp/clamav-db --max-scansize=1024M --max-filesize=1024M -ir artifacts
           - '[[ -z $SEMAPHORE_GIT_TAG_NAME ]] || artifact push workflow artifacts/ --destination artifacts/${ARTIFACT_KEY}/'
       jobs:
         - name: 'Build: centos6 glibc +gssapi'
@@ -204,8 +221,12 @@ blocks:
       prologue:
         commands:
           - docker login --username $DOCKERHUB_USER --password $DOCKERHUB_APIKEY
+          -	mkdir -p /tmp/clamav-db
+	        - curl https://cfltavupdates.s3.us-west-2.amazonaws.com/downloads/signatures.tgz -o /tmp/clamav-db/signatures.tgz
+	        - tar -xzf /tmp/clamav-db/signatures.tgz -C /tmp/clamav-db
       epilogue:
         commands:
+          -  clamscan -d /tmp/clamav-db --max-scansize=1024M --max-filesize=1024M -ir artifacts
           - '[[ -z $SEMAPHORE_GIT_TAG_NAME ]] || artifact push workflow artifacts/ --destination artifacts/${ARTIFACT_KEY}/'
       jobs:
         - name: 'Build: centos7 glibc +gssapi'
@@ -256,7 +277,7 @@ blocks:
           - powershell -command "Expand-Archive clamav-signatures.zip C:\clamav-db"
       epilogue:
         commands:
-          - clamscan -d C:\clamav-db --max-scansize=1024M --max-filesize=1024M -ir .
+          - clamscan -d C:\clamav-db --max-scansize=1024M --max-filesize=1024M -ir artifacts
           - if ($env:SEMAPHORE_GIT_TAG_NAME -ne "") { artifact push workflow artifacts/ --destination artifacts/$Env:ARTIFACT_KEY/ }
       jobs:
         - name: 'Build: MinGW-w64 Dynamic'
