Change repo maintainer and package name (#1)

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "node-rdkafka",
+  "name": "confluent-kafka-js",
   "version": "v2.18.0",
   "description": "Node.js bindings for librdkafka",
   "librdkafka": "2.3.0",
@@ -17,7 +17,7 @@
     "module_name": "node-librdkafka",
     "module_path": "./build/{configuration}/",
     "package_name": "{module_name}-v{version}-{node_abi}-{platform}-{arch}.tar.gz",
-    "host": "https://github.com/emasab/node-rdkafka/releases/download/",
+    "host": "https://github.com/confluentinc/confluent-kafka-js/releases/download/",
     "remote_path": "v{version}"
   },
   "keywords": [
@@ -26,7 +26,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "git@github.com:Blizzard/node-rdkafka.git"
+    "url": "git@github.com:confluentinc/confluent-kafka-js.git"
   },
   "contributors": [
     {
