--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@types/node": "^20.4.5",
     "bluebird": "^3.5.3",
     "jest": "^29.7.0",
+    "eslint": "8.54.0",
     "jsdoc": "^3.4.0",
     "jshint": "^2.10.1",
     "mocha": "^10.2.0",
