--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -27,28 +27,48 @@ global_job_config:
       - checkout
 
 blocks:
-  - name: "Linux amd64"
-    dependencies: [ ]
+  # - name: "Linux amd64"
+  #   dependencies: [ ]
+  #   task:
+  #     agent:
+  #       machine:
+  #         type: s1-prod-ubuntu20-04-amd64-2
+  #     prologue:
+  #       commands:
+  #         - sem-version node 18.19.0
+  #         - node --version
+  #         - npm --version
+  #         - npx --version
+  #         - sudo apt-get update -q
+  #         - git submodule update --init --recursive
+  #     jobs:
+  #       - name: "Build from source and test"
+  #         commands:
+  #           - sudo apt install -y  libcurl4-openssl-dev libcrypto++-dev libssl-dev libzstd-dev
+  #           - npm install # this will actually not build anything if we have a release, but rather, fetch things using node-pre-gyp - so change this later.
+  #           - make test
+  #       - name: "ESLint"
+  #         commands:
+  #           - npm install --only=dev
+  #           - npx eslint lib/kafkajs
+
+  - name: 'OSX arm64/m1'
+    dependencies: []
     task:
       agent:
         machine:
-          type: s1-prod-ubuntu20-04-amd64-2
+          type: s1-prod-macos-arm64
       prologue:
         commands:
           - sem-version node 18.19.0
           - node --version
           - npm --version
           - npx --version
-          - sudo apt-get update -q
           - git submodule update --init --recursive
       jobs:
-        - name: "Build from source and test"
+        - name: 'Build from source and test'
           commands:
-            - sudo apt install -y  libcurl4-openssl-dev libcrypto++-dev libssl-dev libzstd-dev
-            - npm install # this will actually not build anything, but rather, fetch things using node-pre-gyp - so change this later.
+            - npm install # this will actually not build anything if we have a release, but rather, fetch things using node-pre-gyp - so change this later.
             - make test
-        - name: "ESLint"
-          commands:
-            - npm install --only=dev
-            - npx eslint lib/kafkajs
+
 
