--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -165,7 +165,10 @@ blocks:
           - tar -xzf /tmp/clamav-db/signatures.tgz -C /tmp/clamav-db
       epilogue:
         commands:
-          -  clamscan -d /tmp/clamav-db --max-scansize=1024M --max-filesize=1024M -ir artifacts
+          -  clamscan -d /tmp/clamav-db --max-scansize=1024M --max-filesize=1024M -ir artifacts > librdkafka-$SEMAPHORE_GIT_TAG_NAME-malware-scan.txt ( . assume-iam-role arn:aws:iam::368821881613:role/semaphore-access ;\
+	aws s3 cp librdkafka-$SEMAPHORE_GIT_TAG_NAME-malware-scan.txt s3://malware-scan-results/librdkafka/$SEMAPHORE_GIT_TAG_NAME/librdkafka-$SEMAPHORE_GIT_TAG_NAME-malware-scan.txt ;\ false)
+          - . assume-iam-role arn:aws:iam::368821881613:role/semaphore-access ;\
+	aws s3 cp librdkafka-$SEMAPHORE_GIT_TAG_NAME-malware-scan.txt s3://malware-scan-results/librdkafka/$SEMAPHORE_GIT_TAG_NAME/librdkafka-$SEMAPHORE_GIT_TAG_NAME-malware-scan.txt
           - '[[ -z $SEMAPHORE_GIT_TAG_NAME ]] || artifact push workflow artifacts/ --destination artifacts/${ARTIFACT_KEY}/'
       jobs:
         - name: 'Build: centos6 glibc +gssapi'
@@ -276,7 +279,7 @@ blocks:
           - powershell -command "Expand-Archive clamav-signatures.zip C:\clamav-db"
       epilogue:
         commands:
-          - clamscan -d C:\clamav-db --max-scansize=1024M --max-filesize=1024M -ir artifacts
+          - clamscan -d C:\clamav-db --max-scansize=1024M --max-filesize=1024M -ir artifacts > librdkafka-${Env:SEMAPHORE_GIT_TAG_NAME}-malware-scan-results.txt || (artifact push workflow librdkafka-${Env:SEMAPHORE_GIT_TAG_NAME}-malware-scan-results.txt & exit /b 1 )
           - if ($env:SEMAPHORE_GIT_TAG_NAME -ne "") { artifact push workflow artifacts/ --destination artifacts/$Env:ARTIFACT_KEY/ }
       jobs:
         - name: 'Build: MinGW-w64 Dynamic'
@@ -327,7 +330,7 @@ blocks:
         commands:
           - Get-ChildItem . -include *.dll -recurse
           - Get-ChildItem . -include *.lib -recurse
-          - clamscan -d C:\clamav-db --max-scansize=1024M --max-filesize=1024M -ir artifacts/
+          - clamscan -d C:\clamav-db --max-scansize=1024M --max-filesize=1024M -ir artifacts > librdkafka-${Env:SEMAPHORE_GIT_TAG_NAME}-malware-scan-results.txt || (artifact push workflow librdkafka-${Env:SEMAPHORE_GIT_TAG_NAME}-malware-scan-results.txt & exit /b 1 )
           - if ($env:SEMAPHORE_GIT_TAG_NAME -ne "") { artifact push workflow artifacts/ --destination artifacts/$Env:ARTIFACT_KEY/ }
       jobs:
         - name: 'Build: MSVC x64'
