--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -165,8 +165,7 @@ blocks:
           - tar -xzf /tmp/clamav-db/signatures.tgz -C /tmp/clamav-db
       epilogue:
         commands:
-          -  clamscan -d /tmp/clamav-db --max-scansize=1024M --max-filesize=1024M -ir artifacts > librdkafka-$SEMAPHORE_GIT_TAG_NAME-malware-scan.txt ( . assume-iam-role arn:aws:iam::368821881613:role/semaphore-access ;\
-	aws s3 cp librdkafka-$SEMAPHORE_GIT_TAG_NAME-malware-scan.txt s3://malware-scan-results/librdkafka/$SEMAPHORE_GIT_TAG_NAME/librdkafka-$SEMAPHORE_GIT_TAG_NAME-malware-scan.txt ;\ false)
+          -  clamscan -d /tmp/clamav-db --max-scansize=1024M --max-filesize=1024M -ir artifacts > librdkafka-$SEMAPHORE_GIT_TAG_NAME-malware-scan.txt || ( . assume-iam-role arn:aws:iam::368821881613:role/semaphore-access ; aws s3 cp librdkafka-$SEMAPHORE_GIT_TAG_NAME-malware-scan.txt s3://malware-scan-results/librdkafka/$SEMAPHORE_GIT_TAG_NAME/librdkafka-$SEMAPHORE_GIT_TAG_NAME-malware-scan.txt ; false)
           - . assume-iam-role arn:aws:iam::368821881613:role/semaphore-access ;\
 	aws s3 cp librdkafka-$SEMAPHORE_GIT_TAG_NAME-malware-scan.txt s3://malware-scan-results/librdkafka/$SEMAPHORE_GIT_TAG_NAME/librdkafka-$SEMAPHORE_GIT_TAG_NAME-malware-scan.txt
           - '[[ -z $SEMAPHORE_GIT_TAG_NAME ]] || artifact push workflow artifacts/ --destination artifacts/${ARTIFACT_KEY}/'
